--- a/public/index.css
+++ b/public/index.css
@@ -1,14 +1,19 @@
-#img {
-  display: block;
-  margin: auto;
-  height: 128px;
-  width: 128px;
-  padding: 2rem;
+.img{
+  width: 100px;
+  height: 100px;
+  
 }
 
-#canvas {
-  display: block;
-  margin: 2rem auto;
-  width: 540px;
-  height: 540px;
+#div1, #div2 {
+  float: left;
+  width: 100px;
+  height: 35px;
+  margin: 10px;
+  padding: 10px;
+}
+
+
+.body{
+  width: 1000px;
+  height: 600px;
 }
